# AVM-Action

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/avm-action/: Dockerfile  README.md  action.yml  entrypoint.sh  requirements-dev.txt  requirements.txt
.github/actions/avm-action/src/: __init__.py  azure_auth.py  config.py  main.py  terraform_runner.py
.github/actions/avm-action/src/utils/: __init__.py  logging.py
.github/workflows/: cd.yml  ci.yml  security.yml
docs/: action-usage.md  architecture.md  contributing-guidelines.md  terraform-usage.md
terraform/: README.md
terraform/examples/basic-usage/: README.md  main.tf  outputs.tf  terraform.tfvars  variables.tf
terraform/modules/example_module/: README.md  main.tf  variables.tf
tests/: __init__.py  conftest.py
tests/integration/: test_action_integration.py
tests/unit/: test_azure_auth.py  test_config.py  test_terraform_runner.py
